# ASA

./: .gitignore  CHANGELOG.md  CITATION.cff  CODEx_BRIEF.md  CONTRIBUTING.md  LICENSE  README.md  REPRODUCIBILITY.md  practice_run_logs doc  pyproject.toml
.github/workflows/: ci.yml
building_blocks/: ASAResearch.ipynb  ASATrainTest.ipynb  README.md  working _example.py
docs/: ASSUMPTIONS.md  EXPERIMENTS.md  METHOD.md  ROADMAP.md  canonical_experiments.md  notebook_reorganization_instructions.md
notebooks/: ASA_Colab_Quickstart.ipynb  ASA_HF_Checkpoint_CanonProbes_and_MiniFinetune.ipynb  ASA_HF_Demo.ipynb  ASA_Mechanistic_Probing_Reorg.ipynb  README.md  colab_quickstart.ipynb
paper/: paper.md  references.bib
paper/latex/: README.md  main.tex  main_singlefile.tex  refs.bib
paper/latex/sections/: abstract.tex  appendix_author_context.tex  appendix_guidance.tex  conclusion.tex  experiments.tex  introduction.tex  limitations.tex  method.tex  related_work.tex  reproducibility.tex
scripts/: probe_paris_margin.py  smoke.py  train_mini.py
src/asa/: __init__.py  asa.py  asm_block.py  asm_lm.py  checkpoints.py  config.py  demo_hf.py  load_pretrained.py
src/asa/utils/: __init__.py  device.py  seed.py  tokenization.py
tests/: golden_state_dict_keys.txt  test_checkpoint_compat.py  test_checkpoint_keys.py  test_no_nans_smoke.py  test_shapes.py
